--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,13 +5,13 @@
 
       <br /><br /><div style="text-align: center;">
         <h2>VENTAS ENTRADAS</h2>
-      <button class="button-icon button-transito button-clear" ng-click="entrada(3000)">$ 3.000</button>
+      <button class="button-icon button-transito button-clear" ng-click="$root.printval(3000)">$ 3.000</button>
       <br /><br />
-      <button class="button-icon button-transito button-clear" ng-click="entrada(3500)">$ 3.500</button>
+      <button class="button-icon button-transito button-clear" ng-click="$root.printval(3500)">$ 3.500</button>
       <br /><br />
-      <button class="button-icon button-transito button-clear" ng-click="entrada(5000)">$ 5.000</button>
+      <button class="button-icon button-transito button-clear" ng-click="$root.printval(5000)">$ 5.000</button>
       <br /><br />
-      <button class="button-icon button-transito button-clear" ng-click="entrada(5500)">$ 5.500</button>
+      <button class="button-icon button-transito button-clear" ng-click="$root.printval(5500)">$ 5.500</button>
       <br /><br /><br /><br />
       </div>
 
