--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,6 +12,8 @@
       <button class="button-icon button-transito button-clear" ng-click="$root.printval(5000)">$ 5.000</button>
       <br /><br />
       <button class="button-icon button-transito button-clear" ng-click="$root.printval(5500)">$ 5.500</button>
+      <br><br>
+      <button class="button-icon button-transito button-clear" ng-click="$root.printinforme()">INFORME</button>
       <br /><br /><br /><br />
       </div>
 
