--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -13,7 +13,7 @@
       <br /><br />
       <button class="button-icon button-transito button-clear" ng-click="$root.printval(5500)">$ 5.500</button>
       <br><br>
-      <button class="button-icon button-transito button-clear" ng-click="$root.printinforme()">INFORME</button>
+      <button class="button-icon button-transito button-clear" ng-click="$root.printinforme()">INFORME</button>&nbsp;&nbsp;<button class="button-icon button-transito button-clear" ng-click="$root.borrartodo()" style="background-color: black;color:#FFF;">REINICIAR</button>
       <br /><br /><br /><br />
       </div>
 
